# NotesApp

./: README.md
BoostBeast_EchoClient/: CMakeLists.txt  main.cpp
BoostBeast_EchoServer/: Account.cpp  Account.h  CMakeLists.txt  JsonParser.cpp  JsonParser.h  ServerAlgorythms.cpp  fail.cpp  listener.cpp  listener.h  main.cpp  session.cpp  session.h
BoostBeast_EchoServer/functions/: ServerAlgorythms.h
BoostBeast_EchoServer/jsonparser/: JsonParser.cpp  JsonParser.h
BoostBeast_EchoServer/network/: listener.cpp  session.cpp
BoostBeast_NotesServer/: CMakeLists.txt  main.cpp
BoostBeast_NotesServer/boost_server/: CMakeLists.txt  main.cpp
BoostBeast_NotesServer/boost_server/src/: Account.cpp  Account.hpp  CMakeLists.txt  JsonParser.cpp  JsonParser.hpp  Note.cpp  Note.hpp  ServerAlgorythms.cpp  ServerAlgorythms.hpp  fail.cpp  fail.hpp  listener.cpp  listener.hpp  session.cpp  session.hpp
BoostBeast_NotesServer/functions/: ServerAlgorythms.cpp  fail.cpp  fail.h
BoostBeast_NotesServer/jsonparser/: JsonParser.cpp  JsonParser.h
BoostBeast_NotesServer/network/: listener.h  session.cpp  session.h
BoostBeast_NotesServer/server_test/: Account.cpp  CMakeLists.txt  JsonParser.cpp  Note.cpp  ServerAlgorythms.cpp
BoostBeast_NotesServer/tests/: CMakeLists.txt  main.cpp
BoostBeast_NotesServer/user/: Account.cpp  Account.h  Note.cpp  Note.h  user.textClipping
NotesClient/: NotesClient.pro  algorythms.cpp  algorythms.h  dialog.cpp  dialog.h  dialog.ui  myclient.h  style.qss
NotesClientWithTests/: NotesClientWithTests.pro  tst_clienttestcase.cpp
NotesServer/: NotesServer.pro  dialog.cpp  dialog.h  dialog.ui  myclient.cpp  myclient.h  myserver.cpp  myserver.h  serveralgotythms.cpp
QT_NotesClient/: CMakeLists.txt  JsonParser.cpp  JsonParser.h  Note.cpp  NotesClient.cpp  QT_NotesClient.pro  Qt_websocket_echo_client.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  notewidget.cpp  notewidget.h  serveralgotythms.cpp  serveralgotythms.h  style.qss
QT_NotesClient/tests/tests/: test_mainwindow.cpp  test_mainwindow.h  test_notewidget.cpp  test_notewidget.h
QT_NotesServer/: Account.cpp  Note.cpp  Note.h  ServerAlgorythms.h  fail.h  main.cpp
ServerTests/: ServerTests.pro  tst_servertestcase.cpp
